--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -417,20 +417,27 @@
         <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center">
-            <Calendar x:Name="myCalendar" HorizontalAlignment="Left" Height="345" Margin="110,25,0,0" VerticalAlignment="Top" Width="380" Style="{DynamicResource CalendarStyle1}" CalendarButtonStyle="{DynamicResource CalendarButtonStyle1}" CalendarDayButtonStyle="{DynamicResource CalendarDayButtonStyle1}" CalendarItemStyle="{DynamicResource CalendarItemStyle1}"/>
+            <Calendar Margin="20" SelectionMode="SingleDate"
+          x:Name="myCalendar"
+          IsTodayHighlighted="True"
+          Loaded="MyCalendar_Loaded"
+          PreviewMouseLeftButtonDown="MyCalendar_PreviewMouseLeftButtonDown">
+            </Calendar>
+
+
             <Popup Name="myPopup" 
-                   Placement="Left" 
-                   StaysOpen="False">
+       Placement="Left" 
+       StaysOpen="True">
                 <Border BorderThickness="1" Background="White">
                     <StackPanel>
                         <TextBlock Name="myPopupTitle" 
-                                   FontWeight="Bold" 
-                                   FontSize="14" 
-                                   Margin="10" />
+                       FontWeight="Bold" 
+                       FontSize="14" 
+                       Margin="10" />
                         <TextBlock Name="myPopupText" 
-                                   Background="LightBlue" 
-                                   Foreground="Blue" 
-                                   Padding="30" />
+                       Background="LightBlue" 
+                       Foreground="Blue" 
+                       Padding="30" />
                     </StackPanel>
                 </Border>
             </Popup>
