--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -5,20 +5,19 @@
 
     <Grid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <!-- Le calendrier -->
             <Calendar x:Name="myCalendar" Margin="20" SelectionMode="SingleDate"
                       IsTodayHighlighted="True"
                       Loaded="CalendarLoaded" 
-                PreviewMouseLeftButtonDown="OnCalendarDateClicked">
+                      PreviewMouseLeftButtonDown="OnCalendarDateClicked">
             </Calendar>
 
-            <Popup Name="myPopup" Placement="Left" StaysOpen="True">
-                <Border BorderThickness="1" Background="White">
-                    <StackPanel>
-                        <TextBlock Name="myPopupTitle" FontWeight="Bold" FontSize="14" Margin="10" />
-                        <TextBlock Name="myPopupText" Background="LightBlue" Foreground="Blue" Padding="30" />
-                    </StackPanel>
-                </Border>
-            </Popup>
+            <!-- Légende pour afficher les détails de l'événement -->
+            <StackPanel Margin="20">
+                <TextBlock Text="Détails de l'événement" FontWeight="Bold" FontSize="16" Margin="0,0,0,10" />
+                <TextBlock x:Name="eventTitle" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" />
+                <TextBlock x:Name="eventDate" FontSize="12" Foreground="Gray" />
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
