--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -17,6 +17,10 @@
                 <TextBlock Text="Détails de l'événement" FontWeight="Bold" FontSize="16" Margin="0,0,0,10" />
                 <TextBlock x:Name="eventTitle" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" />
                 <TextBlock x:Name="eventDate" FontSize="12" Foreground="Gray" />
+                <StackPanel Margin="20">
+                    <Button Content="Ajouter un événement" Click="OnAddEventClick" Margin="0,10,0,0"/>
+                    <Button Content="Modifier l'événement" Click="OnEditEventClick" Margin="0,10,0,0"/>
+                </StackPanel>
             </StackPanel>
         </StackPanel>
     </Grid>
