--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -5,14 +5,12 @@
 
     <Grid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <!-- Le calendrier -->
             <Calendar x:Name="myCalendar" Margin="20" SelectionMode="SingleDate"
                       IsTodayHighlighted="True"
                       Loaded="CalendarLoaded" 
                       PreviewMouseLeftButtonDown="OnCalendarDateClicked">
             </Calendar>
 
-            <!-- Légende pour afficher les détails de l'événement -->
             <StackPanel Margin="20">
                 <TextBlock Text="Détails de l'événement" FontWeight="Bold" FontSize="16" Margin="0,0,0,10" />
                 <TextBlock x:Name="eventTitle" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" />
@@ -20,6 +18,7 @@
                 <StackPanel Margin="20">
                     <Button Content="Ajouter un événement" Click="OnAddEventClick" Margin="0,10,0,0"/>
                     <Button Content="Modifier l'événement" Click="OnEditEventClick" Margin="0,10,0,0"/>
+                    <Button Content="Supprimer l'événement" Click="OnDeleteEventClick" Margin="0,10,0,0"/>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
