--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -16,7 +16,7 @@
                 <TextBlock x:Name="eventTitle" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" />
                 <TextBlock x:Name="eventDate" FontSize="12" Foreground="Gray" />
                 <StackPanel Margin="20">
-                    <Button Content="Ajouter un événement" Click="OnAddEventClick" Margin="0,10,0,0"/>
+                    <Button Content="Ajouter un événement" Command="{Binding OnAddEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0"/>
                     <Button Content="Modifier l'événement" Click="OnEditEventClick" Margin="0,10,0,0"/>
                     <Button Content="Supprimer l'événement" Click="OnDeleteEventClick" Margin="0,10,0,0"/>
                 </StackPanel>
