--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -8,7 +8,8 @@
             <Calendar x:Name="myCalendar" Margin="20" SelectionMode="SingleDate"
                       IsTodayHighlighted="True"
                       Loaded="CalendarLoaded" 
-                      PreviewMouseLeftButtonDown="OnCalendarDateClicked">
+                      PreviewMouseLeftButtonDown="OnCalendarDateClicked"
+                      SelectedDate="{Binding SelectedDate}">
             </Calendar>
 
             <StackPanel Margin="20">
