--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -1,6 +1,8 @@
 ﻿<Window x:Class="Automate.Views.CalendarWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
         Title="CalendarWindow" Height="450" Width="800">
 
     <Grid>
@@ -8,7 +10,12 @@
             <Calendar x:Name="myCalendar" Margin="20" SelectionMode="SingleDate"
                       IsTodayHighlighted="True"
                       Loaded="CalendarLoaded" 
-                      SelectedDate="{Binding SelectedDate}">
+                      SelectedDate="{Binding SelectedDate, Mode=TwoWay}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectedDatesChanged">
+                        <behaviors:InvokeCommandAction Command="{Binding ClickOnDate}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </Calendar>
 
             <StackPanel Margin="20">
