--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -24,8 +24,13 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
 
             <StackPanel Margin="20">
                 <TextBlock Text="Détails de l'événement" FontWeight="Bold" FontSize="16" Margin="0,0,0,10" />
-                <TextBlock x:Name="eventTitle" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" />
-                <TextBlock x:Name="eventDate" FontSize="12" Foreground="Gray" />
+                <ListBox ItemsSource="{Binding EventTitles}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}" FontSize="14" Margin="0,0,0,5"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
                 <StackPanel Margin="20">
                     <Button Content="Ajouter un événement" Command="{Binding OnAddEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0"/>
                     <Button Content="Modifier l'événement" Command="{Binding OnEditEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0"/>
