--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -24,8 +24,8 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
 
             <StackPanel Margin="20">
                 <TextBlock Text="Détails de l'événement" FontWeight="Bold" FontSize="16" Margin="0,0,0,10" />
-                <ListBox ItemsSource="{Binding EventTitles}">
-                    <ListBox.ItemTemplate>
+                <ListBox ItemsSource="{Binding EventTitles}" SelectedItem="{Binding SelectedEventTitle}">
+                <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" FontSize="14" Margin="0,0,0,5"/>
                         </DataTemplate>
