--- a/Automate/Views/TaskFormWindow.xaml
+++ b/Automate/Views/TaskFormWindow.xaml
@@ -11,12 +11,12 @@
             <TextBlock Text="Ajouter / Modifier Événement" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
 
             <TextBlock Text="Type d'événement"/>
-            <ComboBox x:Name="eventTypeComboBox" />
+            <ComboBox x:Name="eventTypeComboBox" Margin="0 10" Width="200"/>
 
             <TextBlock Text="Date de l'événement" Margin="0,10,0,0"/>
-            <TextBox x:Name="eventDateTextBox" IsReadOnly="True" Width="200" />
+            <TextBox x:Name="eventDateTextBox" IsReadOnly="True" Width="200" Margin="0 10" HorizontalAlignment="Left" />
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20,0,0">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,20,0,0">
                 <Button Content="Ajouter" Width="75" Margin="5" Click="OnAddButtonClick"/>
                 <Button Content="Annuler" Width="75" Margin="5" Click="OnCancelButtonClick"/>
             </StackPanel>
