--- a/Automate/App.xaml
+++ b/Automate/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Automate" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             StartupUri="Views/CalendarWindow.xaml"
+             StartupUri="Views/LoginWindow.xaml"
              xmlns:ui="http://schemas.modernwpf.com/2019"
              >
     <Application.Resources>
