--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -32,9 +32,9 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
                     </ListBox.ItemTemplate>
                 </ListBox>
                 <StackPanel Margin="20">
-                    <Button Content="Ajouter un événement" Command="{Binding OnAddEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="162"/>
-                    <Button Content="Modifier l'événement" Command="{Binding OnEditEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="161"/>
-                    <Button Content="Supprimer l'événement" Command="{Binding OnDeleteEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0"/>
+                    <Button Content="Ajouter un événement" IsEnabled="{Binding IsAdmin}" Command="{Binding OnAddEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="162"/>
+                    <Button Content="Modifier l'événement" IsEnabled="{Binding IsAdmin}" Command="{Binding OnEditEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="161"/>
+                    <Button Content="Supprimer l'événement" IsEnabled="{Binding IsAdmin}" Command="{Binding OnDeleteEventClick}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0"/>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
