--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -42,6 +42,13 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
                         HorizontalAlignment="Left"
                         TextAlignment="Left"
                         TextWrapping="Wrap"/>
+                    <TextBlock Foreground="#4fc978" 
+                        Text="{Binding SuccessMessage}"
+                        Width="200" Height="50" 
+                        Margin="0 10"
+                        HorizontalAlignment="Left"
+                        TextAlignment="Left"
+                        TextWrapping="Wrap"/>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
