--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -6,7 +6,7 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
         Title="CalendarWindow" Height="450" Width="800">
 
     <Grid>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Width="780">
             <Calendar x:Name="calendar" Margin="20" SelectionMode="SingleDate"
                       IsTodayHighlighted="True"
                       SelectedDate="{Binding SelectedDate, Mode=TwoWay}" 
@@ -25,7 +25,7 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
             <StackPanel Margin="20">
                 <TextBlock Text="Détails de l'événement" FontWeight="Bold" FontSize="16" Margin="0,0,0,10" />
                 <ListBox ItemsSource="{Binding EventTitles}" SelectedItem="{Binding SelectedEventTitle}" MaxHeight="100">
-                <ListBox.ItemTemplate>
+                    <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" FontSize="14" Margin="0,0,0,5"/>
                         </DataTemplate>
@@ -50,6 +50,33 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
                         TextAlignment="Left"
                         TextWrapping="Wrap"/>
                 </StackPanel>
+            </StackPanel>
+            <StackPanel Width="183" Height="334">
+                <TextBlock Text="Légende" FontWeight="Bold" FontSize="16" Height="21" />
+                <TextBlock Foreground="Red" 
+                    Text="Critique"
+                    Width="182" Height="16"
+                    TextAlignment="Left"
+                    TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5">
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="-2.622"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="-0.366"/>
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock Foreground="Green" 
+                    Text="Non critique"
+                    Width="182" Height="15"
+                    TextAlignment="Left"
+                    TextWrapping="Wrap"/>
+                <TextBlock Foreground="Blue" 
+                    Text="Date d'aujourd'hui"
+                    Width="182" Height="13"
+                    TextAlignment="Left"
+                    TextWrapping="Wrap"/>
             </StackPanel>
         </StackPanel>
     </Grid>
