--- a/Automate/Views/CalendarWindow.xaml
+++ b/Automate/Views/CalendarWindow.xaml
@@ -35,6 +35,7 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
                     <Button Content="Ajouter un événement" IsEnabled="{Binding IsAdmin}" Command="{Binding AddTaskCommand}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="200"/>
                     <Button Content="Modifier l'événement" IsEnabled="{Binding IsAdmin}" Command="{Binding EditTaskCommand}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="200"/>
                     <Button Content="Supprimer l'événement" IsEnabled="{Binding IsAdmin}" Command="{Binding DeleteTaskCommand}" CommandParameter="{Binding SelectedDate}" Margin="0,10,0,0" Width="200"/>
+                    <Button Content="Retour au menu" Command="{Binding GoToHomeCommand}" Margin="0,10,0,0" Width="200"/>
                     <TextBlock Foreground="#c50500" 
                         Text="{Binding ErrorMessages}"
                         Width="200" Height="50" 
@@ -51,7 +52,7 @@ xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
                         TextWrapping="Wrap"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Width="183" Height="334">
+            <StackPanel Margin="0 20">
                 <TextBlock Text="Légende" FontWeight="Bold" FontSize="16" Height="21" />
                 <TextBlock Foreground="Red" 
                     Text="Critique"
